--- a/gallery.html
+++ b/gallery.html
@@ -106,7 +106,7 @@ footer {
     text-align:center;
 }
 
-/* Placeholder sizes */
+    
 .figure-rect { flex:2; height:200px; }
 .figure-square { flex:1; height:200px; }
 
@@ -135,7 +135,7 @@ footer {
 <div class="gallery-collection">
 <h3 class="collection-title">Friends</h3>
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Friends+1" alt="Friends 1"></a><figcaption>Park Day</figcaption></figure>
+    <figure class="figure-rect"><a href="#"><img src="friend1.jpeg" alt="Friends 1"></a><figcaption>Park Day</figcaption></figure>
     <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Friends+2" alt="Friends 2"></a><figcaption>Birthday</figcaption></figure>
     <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Friends+3" alt="Friends 3"></a><figcaption>Beach Trip</figcaption></figure>
 </div>
@@ -206,3 +206,4 @@ footer {
 </footer>
 </body>
 </html>
+
