--- a/gallery.html
+++ b/gallery.html
@@ -135,14 +135,14 @@ footer {
 <div class="gallery-collection">
 <h3 class="collection-title">Friends</h3>
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="friend1.jpeg" alt="Friends 1"></a><figcaption>Park Day</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Friends+2" alt="Friends 2"></a><figcaption>Birthday</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Friends+3" alt="Friends 3"></a><figcaption>Beach Trip</figcaption></figure>
+    <figure class="figure-rect"><a href="#"><img src="friend1.jpeg" alt="Friends 1"></a><figcaption>My Bestfriend Zea</figcaption></figure>
+    <figure class="figure-square"><a href="#"><img src="friend2.jpeg" alt="Friends 2"></a><figcaption>My Bestfriend Trayce</figcaption></figure>
+    <figure class="figure-rect"><a href="#"><img src="friend3.jpeg" alt="Friends 3"></a><figcaption>Double Date w/ Zea</figcaption></figure>
 </div>
 <div class="gallery-row">
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Friends+4" alt="Friends 4"></a><figcaption>Movie Night</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Friends+5" alt="Friends 5"></a><figcaption>Road Trip</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Friends+6" alt="Friends 6"></a><figcaption>Cafe Hangout</figcaption></figure>
+    <figure class="figure-square"><a href="#"><img src="friend4.jpeg" alt="Friends 4"></a><figcaption>Lunch w/ Zea</figcaption></figure>
+    <figure class="figure-rect"><a href="#"><img src="friend5.jpeg" alt="Friends 5"></a><figcaption>UE friends</figcaption></figure>
+    <figure class="figure-square"><a href="#"><img src="friend6.jpeg" alt="Friends 6"></a><figcaption>Childhood friends</figcaption></figure>
 </div>
 </div>
 
@@ -206,4 +206,5 @@ footer {
 </footer>
 </body>
 </html>
+
 
