--- a/gallery.html
+++ b/gallery.html
@@ -40,6 +40,7 @@ header {
 }
 
 nav { display:flex; justify-content:center; gap:4rem; }
+
 nav a {
     text-decoration:none;
     font-family: 'Playfair Display', serif;
@@ -47,24 +48,88 @@ nav a {
     color: var(--text-dark);
     transition: 0.3s ease;
 }
+
 nav a:hover { color: var(--primary-red); }
 
-.section { padding: 6rem 5%; }
+.section { padding: 8rem 5% 6rem; }
+
 .section-content { max-width: 1200px; margin:auto; }
 
-h2 { font-family: 'Playfair Display', serif; font-size:2.8rem; margin-bottom:2rem; text-align:center; }
-
-.text-link { color: var(--text-dark); text-decoration: underline; font-weight: 600; transition: 0.3s ease;}
-.text-link:hover { color: var(--primary-red); }
-
-.back-to-top {
-    display:inline-block; margin-top:2rem;
-    font-family: 'Playfair Display', serif; font-size:0.95rem;
-    text-decoration:none; color:var(--text-dark);
-    border-bottom:1px solid var(--text-dark);
-    transition:0.3s ease;
+h2 {
+    font-family: 'Playfair Display', serif;
+    font-size:2.8rem;
+    margin-bottom:2rem;
+    text-align:center;
 }
-.back-to-top:hover { color: var(--primary-red); border-color: var(--primary-red); }
+
+/* Gallery */
+
+.gallery-collection {
+    margin-bottom:3rem;
+    padding-bottom:2rem;
+    border-bottom: 2px solid var(--border-line);
+}
+
+.collection-title {
+    font-family: 'Playfair Display', serif;
+    font-size:1.8rem;
+    margin:2rem 0 1.5rem;
+}
+
+.gallery-row {
+    display:flex;
+    gap:20px;
+    margin-bottom:20px;
+    align-items: stretch;
+}
+
+.gallery-row figure {
+    margin:0;
+    background:white;
+    border-radius:10px;
+    box-shadow: 0 8px 18px rgba(0,0,0,0.08);
+    overflow:hidden;
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+.gallery-row figure:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 14px 26px rgba(0,0,0,0.12);
+}
+
+.figure-rect {
+    flex:2;
+    aspect-ratio: 16 / 9;
+}
+
+.figure-square {
+    flex:1;
+    aspect-ratio: 1 / 1;
+}
+
+.gallery-row img {
+    width:100%;
+    height:100%;
+    object-fit:cover;
+}
+
+.gallery-row figcaption {
+    padding:10px;
+    font-size:0.9rem;
+    color:var(--muted-text);
+    text-align:center;
+    background:white;
+}
+
+@media(max-width: 800px){
+    .gallery-row { flex-direction: column; }
+
+    .figure-rect,
+    .figure-square {
+        flex:1;
+        aspect-ratio: 4 / 3;
+    }
+}
 
 footer {
     background-color: #DCDCD5;
@@ -72,52 +137,27 @@ footer {
     text-align:center;
     margin-top: 4rem;
 }
-.social-links { display:flex; justify-content:center; gap:1.5rem; margin-bottom:1rem; }
-.social-links a { color: var(--text-dark); font-size:1.4rem; transition:0.3s ease; }
+
+.social-links {
+    display:flex;
+    justify-content:center;
+    gap:1.5rem;
+    margin-bottom:1rem;
+}
+
+.social-links a {
+    color: var(--text-dark);
+    font-size:1.4rem;
+    transition:0.3s ease;
+}
+
 .social-links a:hover { color: var(--primary-red); }
 
-/* Justified gallery styles */
-.gallery-collection { margin-bottom:3rem; padding-bottom:2rem; border-bottom: 2px solid var(--border-line); }
-.collection-title { font-family: 'Playfair Display', serif; font-size:1.8rem; margin:2rem 0 1rem; }
-
-.gallery-row {
-    display:flex;
-    gap:15px;
-    margin-bottom:15px;
-}
-.gallery-row figure {
-    margin:0; background:white;
-    border-left:4px solid var(--primary-red);
-    box-shadow: 0 8px 16px rgba(0,0,0,0.08);
-    overflow:hidden;
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-.gallery-row figure:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 12px 24px rgba(0,0,0,0.12);
-}
-.gallery-row img {
-    width:100%; display:block; object-fit:cover;
-}
-.gallery-row figcaption {
-    padding:8px 12px;
-    font-size:0.95rem;
-    color:var(--muted-text);
-    text-align:center;
-}
-
-    
-.figure-rect { flex:2; height:200px; }
-.figure-square { flex:1; height:200px; }
-
-@media(max-width: 800px){
-    .gallery-row { flex-direction: column; }
-    .figure-rect, .figure-square { flex:1; height:200px; }
-}
 </style>
 </head>
 
 <body>
+
 <header>
 <nav>
     <a href="index.html">Home</a>
@@ -131,67 +171,74 @@ footer {
 <div class="section-content">
 <h2>My Gallery</h2>
 
-<!-- Friends Collection -->
+<!-- Friends -->
 <div class="gallery-collection">
 <h3 class="collection-title">Friends</h3>
+
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="friend1.jpeg" alt="Friends 1"></a><figcaption>My Bestfriend Zea</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="friend2.jpeg" alt="Friends 2"></a><figcaption>My Bestfriend Trayce</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="friend3.jpeg" alt="Friends 3"></a><figcaption>Double Date w/ Zea</figcaption></figure>
+    <figure class="figure-rect"><img src="friend1.jpeg"><figcaption>My Bestfriend Zea</figcaption></figure>
+    <figure class="figure-square"><img src="friend2.jpeg"><figcaption>My Bestfriend Trayce</figcaption></figure>
+    <figure class="figure-rect"><img src="friend3.jpeg"><figcaption>Double Date w/ Zea</figcaption></figure>
 </div>
+
 <div class="gallery-row">
-    <figure class="figure-square"><a href="#"><img src="friend4.jpeg" alt="Friends 4"></a><figcaption>Lunch w/ Zea</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="friend5.jpeg" alt="Friends 5"></a><figcaption>UE friends</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="friend6.jpeg" alt="Friends 6"></a><figcaption>Childhood friends</figcaption></figure>
+    <figure class="figure-square"><img src="friend4.jpeg"><figcaption>Lunch w/ Zea</figcaption></figure>
+    <figure class="figure-rect"><img src="friend5.jpeg"><figcaption>UE friends</figcaption></figure>
+    <figure class="figure-square"><img src="friend6.jpeg"><figcaption>Childhood friends</figcaption></figure>
 </div>
 </div>
 
-<!-- Family Collection -->
+<!-- Family -->
 <div class="gallery-collection">
 <h3 class="collection-title">Family</h3>
+
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Family+1" alt="Family 1"></a><figcaption>Reunion</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Family+2" alt="Family 2"></a><figcaption>Christmas</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Family+3" alt="Family 3"></a><figcaption>Birthday</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Family+1"><figcaption>Reunion</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Family+2"><figcaption>Christmas</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Family+3"><figcaption>Birthday</figcaption></figure>
 </div>
+
 <div class="gallery-row">
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Family+4" alt="Family 4"></a><figcaption>Picnic</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Family+5" alt="Family 5"></a><figcaption>Graduation</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Family+6" alt="Family 6"></a><figcaption>BBQ</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Family+4"><figcaption>Picnic</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Family+5"><figcaption>Graduation</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Family+6"><figcaption>BBQ</figcaption></figure>
 </div>
 </div>
 
-<!-- Hobby Collection -->
+<!-- Crocheting -->
 <div class="gallery-collection">
 <h3 class="collection-title">Crocheting</h3>
+
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Crochet+1" alt="Crochet 1"></a><figcaption>Blanket</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Crochet+2" alt="Crochet 2"></a><figcaption>Scarf</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Crochet+3" alt="Crochet 3"></a><figcaption>Amigurumi</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Crochet+1"><figcaption>Blanket</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Crochet+2"><figcaption>Scarf</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Crochet+3"><figcaption>Amigurumi</figcaption></figure>
 </div>
+
 <div class="gallery-row">
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Crochet+4" alt="Crochet 4"></a><figcaption>Gifts</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Crochet+5" alt="Crochet 5"></a><figcaption>Work in Progress</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Crochet+6" alt="Crochet 6"></a><figcaption>Colorful</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Crochet+4"><figcaption>Gifts</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Crochet+5"><figcaption>Work in Progress</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Crochet+6"><figcaption>Colorful</figcaption></figure>
 </div>
 </div>
 
-<!-- Lover Collection -->
+<!-- My Love -->
 <div class="gallery-collection">
 <h3 class="collection-title">My Love</h3>
+
 <div class="gallery-row">
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Lover+1" alt="Lover 1"></a><figcaption>Anniversary</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Lover+2" alt="Lover 2"></a><figcaption>Beach</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Lover+3" alt="Lover 3"></a><figcaption>Movie Night</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Lover+1"><figcaption>Anniversary</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Lover+2"><figcaption>Beach</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Lover+3"><figcaption>Movie Night</figcaption></figure>
 </div>
+
 <div class="gallery-row">
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Lover+4" alt="Lover 4"></a><figcaption>Picnic</figcaption></figure>
-    <figure class="figure-rect"><a href="#"><img src="https://via.placeholder.com/400x200?text=Lover+5" alt="Lover 5"></a><figcaption>Celebration</figcaption></figure>
-    <figure class="figure-square"><a href="#"><img src="https://via.placeholder.com/200?text=Lover+6" alt="Lover 6"></a><figcaption>Night Out</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Lover+4"><figcaption>Picnic</figcaption></figure>
+    <figure class="figure-rect"><img src="https://via.placeholder.com/400x200?text=Lover+5"><figcaption>Celebration</figcaption></figure>
+    <figure class="figure-square"><img src="https://via.placeholder.com/200?text=Lover+6"><figcaption>Night Out</figcaption></figure>
 </div>
 </div>
 
-<a href="#top" class="back-to-top">Back to Top</a>
 </div>
 </section>
 
@@ -204,7 +251,6 @@ footer {
 </div>
 <p>&copy; Cyril Libuton</p>
 </footer>
+
 </body>
 </html>
-
-
