--- a/gallery.html
+++ b/gallery.html
@@ -95,7 +95,6 @@ h2 {
     border-radius:10px;
     overflow:hidden;
     position: relative;
-    flex:1;
 }
 
 .figure-rect {
@@ -182,27 +181,26 @@ footer {
 <div class="section-content">
 <h2>My Gallery</h2>
 
+<!-- Friends -->
 <div class="gallery-collection">
 <h3 class="collection-title">Friends</h3>
 
-<div class="gallery-row"> <!--- FRIEND --->
+<div class="gallery-row">
     <figure class="figure-rect">
-        <a href="friend1.jpeg" target="_blank">
+        <a href="friend1.jpeg" target="imageTab">
             <img src="friend1.jpeg" alt="My Bestfriend Zea">
         </a>
         <figcaption>My Bestfriend Zea</figcaption>
     </figure>
-
     <figure class="figure-square">
-        <a href="friend2.jpeg" target="_blank">
+        <a href="friend2.jpeg" target="imageTab">
             <img src="friend2.jpeg" alt="My Bestfriend Trayce">
         </a>
         <figcaption>My Bestfriend Trayce</figcaption>
     </figure>
-
     <figure class="figure-rect">
-        <a href="friend3.jpeg" target="_blank">
-            <img src="friend3.jpeg" alt="Double Date">
+        <a href="friend3.jpeg" target="imageTab">
+            <img src="friend3.jpeg" alt="Double Date w/ Zea">
         </a>
         <figcaption>Double Date w/ Zea</figcaption>
     </figure>
@@ -210,28 +208,52 @@ footer {
 
 <div class="gallery-row">
     <figure class="figure-square">
-        <a href="friend4.jpeg" target="_blank">
-            <img src="friend4.jpeg" alt="Lunch">
+        <a href="friend4.jpeg" target="imageTab">
+            <img src="friend4.jpeg" alt="Lunch w/ Zea">
         </a>
         <figcaption>Lunch w/ Zea</figcaption>
     </figure>
-
     <figure class="figure-rect">
-        <a href="friend5.jpeg" target="_blank">
+        <a href="friend5.jpeg" target="imageTab">
             <img src="friend5.jpeg" alt="UE friends">
         </a>
         <figcaption>UE friends</figcaption>
     </figure>
-
     <figure class="figure-square">
-        <a href="friend6.jpeg" target="_blank">
+        <a href="friend6.jpeg" target="imageTab">
             <img src="friend6.jpeg" alt="Childhood friends">
         </a>
         <figcaption>Childhood friends</figcaption>
     </figure>
-</div> <!--- FRIEND --->
-
 </div>
+</div>
+
+<!-- Family -->
+<div class="gallery-collection">
+<h3 class="collection-title">Family</h3>
+
+<div class="gallery-row">
+    <figure class="figure-rect">
+        <a href="https://via.placeholder.com/400x200?text=Family+1" target="imageTab">
+            <img src="https://via.placeholder.com/400x200?text=Family+1" alt="Family 1">
+        </a>
+        <figcaption>Reunion</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="https://via.placeholder.com/200?text=Family+2" target="imageTab">
+            <img src="https://via.placeholder.com/200?text=Family+2" alt="Family 2">
+        </a>
+        <figcaption>Christmas</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="https://via.placeholder.com/400x200?text=Family+3" target="imageTab">
+            <img src="https://via.placeholder.com/400x200?text=Family+3" alt="Family 3">
+        </a>
+        <figcaption>Birthday</figcaption>
+    </figure>
+</div>
+</div>
+
 </div>
 </section>
 
