--- a/gallery.html
+++ b/gallery.html
@@ -184,7 +184,6 @@ footer {
 <!-- Friends -->
 <div class="gallery-collection">
 <h3 class="collection-title">Friends</h3>
-
 <div class="gallery-row">
     <figure class="figure-rect">
         <a href="friend1.jpeg" target="imageTab">
@@ -205,7 +204,6 @@ footer {
         <figcaption>Double Date w/ Zea</figcaption>
     </figure>
 </div>
-
 <div class="gallery-row">
     <figure class="figure-square">
         <a href="friend4.jpeg" target="imageTab">
@@ -231,28 +229,141 @@ footer {
 <!-- Family -->
 <div class="gallery-collection">
 <h3 class="collection-title">Family</h3>
-
 <div class="gallery-row">
     <figure class="figure-rect">
-        <a href="https://via.placeholder.com/400x200?text=Family+1" target="imageTab">
-            <img src="https://via.placeholder.com/400x200?text=Family+1" alt="Family 1">
+        <a href="family1.jpeg" target="imageTab">
+            <img src="family1.jpeg" alt="Family 1">
         </a>
-        <figcaption>Reunion</figcaption>
+        <figcaption>Family Reunion</figcaption>
     </figure>
     <figure class="figure-square">
-        <a href="https://via.placeholder.com/200?text=Family+2" target="imageTab">
-            <img src="https://via.placeholder.com/200?text=Family+2" alt="Family 2">
+        <a href="family2.jpeg" target="imageTab">
+            <img src="family2.jpeg" alt="Family 2">
         </a>
-        <figcaption>Christmas</figcaption>
+        <figcaption>Christmas Celebration</figcaption>
     </figure>
     <figure class="figure-rect">
-        <a href="https://via.placeholder.com/400x200?text=Family+3" target="imageTab">
-            <img src="https://via.placeholder.com/400x200?text=Family+3" alt="Family 3">
+        <a href="family3.jpeg" target="imageTab">
+            <img src="family3.jpeg" alt="Family 3">
         </a>
-        <figcaption>Birthday</figcaption>
+        <figcaption>Birthday Party</figcaption>
+    </figure>
+</div>
+<div class="gallery-row">
+    <figure class="figure-square">
+        <a href="family4.jpeg" target="imageTab">
+            <img src="family4.jpeg" alt="Family 4">
+        </a>
+        <figcaption>Vacation</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="family5.jpeg" target="imageTab">
+            <img src="family5.jpeg" alt="Family 5">
+        </a>
+        <figcaption>Picnic Day</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="family6.jpeg" target="imageTab">
+            <img src="family6.jpeg" alt="Family 6">
+        </a>
+        <figcaption>Family Dinner</figcaption>
     </figure>
 </div>
 </div>
+
+<!-- Hobby -->
+<div class="gallery-collection">
+<h3 class="collection-title">Hobby</h3>
+<div class="gallery-row">
+    <figure class="figure-rect">
+        <a href="hobby1.jpeg" target="imageTab">
+            <img src="hobby1.jpeg" alt="Hobby 1">
+        </a>
+        <figcaption>Painting</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="hobby2.jpeg" target="imageTab">
+            <img src="hobby2.jpeg" alt="Hobby 2">
+        </a>
+        <figcaption>Photography</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="hobby3.jpeg" target="imageTab">
+            <img src="hobby3.jpeg" alt="Hobby 3">
+        </a>
+        <figcaption>Cooking</figcaption>
+    </figure>
+</div>
+<div class="gallery-row">
+    <figure class="figure-square">
+        <a href="hobby4.jpeg" target="imageTab">
+            <img src="hobby4.jpeg" alt="Hobby 4">
+        </a>
+        <figcaption>Gardening</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="hobby5.jpeg" target="imageTab">
+            <img src="hobby5.jpeg" alt="Hobby 5">
+        </a>
+        <figcaption>Writing</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="hobby6.jpeg" target="imageTab">
+            <img src="hobby6.jpeg" alt="Hobby 6">
+        </a>
+        <figcaption>Reading</figcaption>
+    </figure>
+</div>
+</div>
+
+<!-- Lover -->
+<div class="gallery-collection">
+<h3 class="collection-title">Lover</h3>
+<div class="gallery-row">
+    <figure class="figure-rect">
+        <a href="lover1.jpeg" target="imageTab">
+            <img src="lover1.jpeg" alt="Lover 1">
+        </a>
+        <figcaption>Valentine's Day</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="lover2.jpeg" target="imageTab">
+            <img src="lover2.jpeg" alt="Lover 2">
+        </a>
+        <figcaption>Anniversary</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="lover3.jpeg" target="imageTab">
+            <img src="lover3.jpeg" alt="Lover 3">
+        </a>
+        <figcaption>Date Night</figcaption>
+    </figure>
+</div>
+<div class="gallery-row">
+    <figure class="figure-square">
+        <a href="lover4.jpeg" target="imageTab">
+            <img src="lover4.jpeg" alt="Lover 4">
+        </a>
+        <figcaption>Beach Trip</figcaption>
+    </figure>
+    <figure class="figure-rect">
+        <a href="lover5.jpeg" target="imageTab">
+            <img src="lover5.jpeg" alt="Lover 5">
+        </a>
+        <figcaption>Movie Night</figcaption>
+    </figure>
+    <figure class="figure-square">
+        <a href="lover6.jpeg" target="imageTab">
+            <img src="lover6.jpeg" alt="Lover 6">
+        </a>
+        <figcaption>Sunset Walk</figcaption>
+    </figure>
+</div>
+</div>
+
+</div>
+</section>
+
 
 </div>
 </section>
@@ -269,3 +380,4 @@ footer {
 
 </body>
 </html>
+
