--- a/gallery.html
+++ b/gallery.html
@@ -234,19 +234,19 @@ footer {
         <a href="family1.jpeg" target="imageTab">
             <img src="family1.jpeg" alt="Family 1">
         </a>
-        <figcaption>Family Reunion</figcaption>
+        <figcaption>Father side</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="family2.jpeg" target="imageTab">
             <img src="family2.jpeg" alt="Family 2">
         </a>
-        <figcaption>Christmas Celebration</figcaption>
+        <figcaption>Me and my niece</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="family3.jpeg" target="imageTab">
             <img src="family3.jpeg" alt="Family 3">
         </a>
-        <figcaption>Birthday Party</figcaption>
+        <figcaption>Mother side</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
@@ -254,19 +254,19 @@ footer {
         <a href="family4.jpeg" target="imageTab">
             <img src="family4.jpeg" alt="Family 4">
         </a>
-        <figcaption>Vacation</figcaption>
+        <figcaption>w/ my mom</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="family5.jpeg" target="imageTab">
             <img src="family5.jpeg" alt="Family 5">
         </a>
-        <figcaption>Picnic Day</figcaption>
+        <figcaption>Father side</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="family6.jpeg" target="imageTab">
             <img src="family6.jpeg" alt="Family 6">
         </a>
-        <figcaption>Family Dinner</figcaption>
+        <figcaption>My mom and her lover</figcaption>
     </figure>
 </div>
 </div>
@@ -380,4 +380,5 @@ footer {
 
 </body>
 </html>
+
 
