--- a/gallery.html
+++ b/gallery.html
@@ -279,19 +279,19 @@ footer {
         <a href="hobby1.jpeg" target="imageTab">
             <img src="hobby1.jpeg" alt="Hobby 1">
         </a>
-        <figcaption>Painting</figcaption>
+        <figcaption>feb 2026</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="hobby2.jpeg" target="imageTab">
             <img src="hobby2.jpeg" alt="Hobby 2">
         </a>
-        <figcaption>Photography</figcaption>
+        <figcaption>Feb 2025</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="hobby3.jpeg" target="imageTab">
             <img src="hobby3.jpeg" alt="Hobby 3">
         </a>
-        <figcaption>Cooking</figcaption>
+        <figcaption>Feb 2025</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
@@ -299,19 +299,19 @@ footer {
         <a href="hobby4.jpeg" target="imageTab">
             <img src="hobby4.jpeg" alt="Hobby 4">
         </a>
-        <figcaption>Gardening</figcaption>
+        <figcaption>Mar 2025</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="hobby5.jpeg" target="imageTab">
             <img src="hobby5.jpeg" alt="Hobby 5">
         </a>
-        <figcaption>Writing</figcaption>
+        <figcaption>Jun 2025</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="hobby6.jpeg" target="imageTab">
             <img src="hobby6.jpeg" alt="Hobby 6">
         </a>
-        <figcaption>Reading</figcaption>
+        <figcaption>Jul 2025</figcaption>
     </figure>
 </div>
 </div>
@@ -380,5 +380,6 @@ footer {
 
 </body>
 </html>
+
 
 
