--- a/gallery.html
+++ b/gallery.html
@@ -273,13 +273,13 @@ footer {
 
 <!-- Hobby -->
 <div class="gallery-collection">
-<h3 class="collection-title">Hobby</h3>
+<h3 class="collection-title">My Hobby</h3>
 <div class="gallery-row">
     <figure class="figure-rect">
         <a href="hobby1.jpeg" target="imageTab">
             <img src="hobby1.jpeg" alt="Hobby 1">
         </a>
-        <figcaption>feb 2026</figcaption>
+        <figcaption>Feb 2026</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="hobby2.jpeg" target="imageTab">
@@ -318,25 +318,25 @@ footer {
 
 <!-- Lover -->
 <div class="gallery-collection">
-<h3 class="collection-title">Lover</h3>
+<h3 class="collection-title">My Lover</h3>
 <div class="gallery-row">
     <figure class="figure-rect">
         <a href="lover1.jpeg" target="imageTab">
             <img src="lover1.jpeg" alt="Lover 1">
         </a>
-        <figcaption>Valentine's Day</figcaption>
+        <figcaption>antipolo date</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="lover2.jpeg" target="imageTab">
             <img src="lover2.jpeg" alt="Lover 2">
         </a>
-        <figcaption>Anniversary</figcaption>
+        <figcaption>photoboot date</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="lover3.jpeg" target="imageTab">
             <img src="lover3.jpeg" alt="Lover 3">
         </a>
-        <figcaption>Date Night</figcaption>
+        <figcaption>antipolo date</figcaption>
     </figure>
 </div>
 <div class="gallery-row">
@@ -344,19 +344,19 @@ footer {
         <a href="lover4.jpeg" target="imageTab">
             <img src="lover4.jpeg" alt="Lover 4">
         </a>
-        <figcaption>Beach Trip</figcaption>
+        <figcaption>cinema date</figcaption>
     </figure>
     <figure class="figure-rect">
         <a href="lover5.jpeg" target="imageTab">
             <img src="lover5.jpeg" alt="Lover 5">
         </a>
-        <figcaption>Movie Night</figcaption>
+        <figcaption>photobooth date</figcaption>
     </figure>
     <figure class="figure-square">
         <a href="lover6.jpeg" target="imageTab">
             <img src="lover6.jpeg" alt="Lover 6">
         </a>
-        <figcaption>Sunset Walk</figcaption>
+        <figcaption>cafe date</figcaption>
     </figure>
 </div>
 </div>
@@ -380,6 +380,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
